<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.manage.NoSchedulesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_outline"
        android:backgroundTint="@color/primary_white">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_schedules_message"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.392" />

        <Button
            android:id="@+id/toNewScheduleButton"
            android:layout_width="147dp"
            android:layout_height="79dp"
            android:background="@drawable/rounded_outline"
            android:backgroundTint="@color/primary_grey"
            android:text="@string/new_schedule_button_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.208" />

        <Button
            android:id="@+id/toMenuButton"
            android:layout_width="147dp"
            android:layout_height="75dp"
            android:layout_marginStart="240dp"
            android:background="@drawable/rounded_outline"
            android:backgroundTint="@color/primary_grey"
            android:text="@string/to_menu_button_prompt"
            app:layout_constraintBottom_toBottomOf="@+id/toNewScheduleButton"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/toNewScheduleButton"
            app:layout_constraintTop_toTopOf="@+id/toNewScheduleButton"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>